# Leaf-Annotation-Tool

./: .dockerignore  .env.example  .gitignore  .venv  Dockerfile  Dockerfile.backup-status  Dockerfile.frontend  Dockerfile.lsyncd  Dockerfile.test  README.md  alembic.ini  app.config.toml.example  compose.backup.yaml  compose.yaml  container_entry.py  deploy.py  deploy_lib.py  docker-bake.hcl  glm-harness.toml  pyproject.toml  run.sh
.glm-harness/: scope.json
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_annotation_stroke_model.py  0003_viewport_event.py  0004_taxonomy_v2.py  0005_candidate_objects.py  0006_co_erasure.py  0007_stroke_tool.py  0008_merge_submission.py  0009_annotation_compound_id.py  0010_vertex_normalization.py  0011_annotation_bbox.py
docs/: BACKLOG.md  BUGS.md  PROCEDURE.md  RUNBOOK — deploy + old-data migration (staged 2026-06-30).md  RUNBOOK — ownership flip (run stack as crf37f).md  SONNET_WORKLOG.md  SPEC.md  TASK_METRICS.md
ops/: litestream.yml  lsyncd.conf.lua
scripts/: gate.py  gate.sh  migrate_stroke_width.py  snapshot_prod.sh  worktree.sh
scripts/hooks/: pre-commit
webapp/: __init__.py  app.py  asgi.py  auth.py  backup_status.py  config.py  config_file.py  db.py  imaging.py  projects.py  rederive_bboxes.py  restore.py  seed.py  sync_status.py  taxonomy.py  tile_cache.py  tiling.py  version.py  wsgi.py
webapp/frontend/: eslint.config.js  node_modules  package-lock.json  package.json  playwright.config.ts  playwright.unit.config.ts  tsconfig.json  vite.config.ts
webapp/static/: analyze.js  app.js  canvas.js  modal.js  (+10 more)
(+350 files in other folders)
