[project]
name = "leaf-annotation"
version = "0.1.0"
description = "Lesion annotation trainer / comparison / analyze tool (Flask backend)."
requires-python = ">=3.10"
dependencies = [
    "flask",
    "pillow",
    "numpy",
    "shapely",
    "granian>=2.7.7",
    "python-dotenv",
    "scipy>=1.15.3",
    "alembic>=1.18.5",
]

[project.scripts]
leaf-annotation = "webapp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package only the backend Python modules (webapp/*.py) — not the frontend/static/data dirs.
[tool.hatch.build.targets.wheel]
include = ["webapp/*.py"]
